# email-triage-openenv

./: Dockerfile  README.md  __init__.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
.github/workflows/: sync_to_hf.yml
server/: Dockerfile  app.py  email_triage_environment.py
